--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,6 @@
   <main>
     {{ content }}
   </main>
-  <footer>© {{ "now" | date: "%Y" }} Ulikenet — Accessible, blue links, big text</footer>
+  <footer>© {{ "now" | date: "%Y" }} Ulikenet — All Rights Reserved</footer>
 </body>
 </html>
